Pending Changes
- Fixed issue where Player.cs doesn't check for all private network IPs starting with 172 (GitHub issue #2)

v4.6.0.1
- Command thread will no longer be manually aborted, as this can sometimes cause problems closing the socket.

v4.6.0.0
This release was a redo of all changes made since 4.3.0.0. Because of this, we've listed all those changes here:
- Fixed offline undo bug for players who leave autoloaded levels
- Changed the Console Message in the server for CLI so that it resembles the console message for GUI users.
- Fixed an issue where running the software would open up a small CLI window as well as the GUI.
- Port checker now uses MCForge.net to see if the server port is accessible.
- Fixed server verifier to work with Class A and Class B networks (reported in forum topic 688)
- Command thread will no longer be manually aborted, as this can sometimes cause problems closing the socket.


- Added new open-source license information to source headers
- Updated dev list
- New commands:
  - /calculate
  - /compload
  - /ellipse
  - /fakerank and /fakepay
  - /high5
  - /news
  - /ohide and /xhide
  - /oprules
  - /pcinema, /scinema, and /cintogif
  - /playercls and /globalcls
  - /review
  - /ragequit
  - /serverinfo
  - /xmute
- Fixed commands:
  - /summon now force-fetches players from other levels
  - /hackrank was cleaned up
  - Fixed permission issues in various commands, making them more secure

v4.3.0.0
- Fixed issue where errors caused early in server startup weren't being logged correctly and crashing the server.
- Added a "public IDictionary<string, string> Extras" to Player and Level objects
  - Allows command devs to store extra temporary data
  - Devs will responsible for managing this data and not overwriting other commands' data (mostly because I'm too lazy to partition it - it'll be fine :P)
- Changed web references to our new domain: mcforge.net

v4.2.0.1
- Fixed naming typos with commands "seen" and "zombiespawn"