@@ -24,11 +24,7 @@ namespace MCForge
 {
     public static class ServerSettings
     {
-        // The Update URL must be hardcoded in Program.cs!!
-        // Don't even try referencing this from Program.cs it will fail miserably.
-        public static string CurrentVersionFile = "http://www.mcforge.net/curversion.txt";
-        public static string DLLLocation = "http://www.mcforge.net/MCForge_.dll";
-        public static string ChangelogLocation = "http://www.mcforge.net/changelog.txt";
+        // Don't even try referencing this from Program.cs, you'll break the updater and it will fail miserably.
         public static string RevisionList = "http://www.mcforge.net/revs.txt";
         public static string HeartbeatAnnounce = "http://www.mcforge.net/hbannounce.php";
         public static string ArchivePath = "http://www.mcforge.net/archives/exe/";
